# EmailIntelligence

./: .RULES_ANALYSIS.md  .aider.conf.yml  .bandit  .coderabbit.yaml  .concurrent_reviews.json  .distributed_translation.json  .doc_templates.json  .editorconfig  .env.example  .eslintignore  .eslintrc.json  .flake8  .geminiignore  .gitattributes  .gitignore  .gitmodules  .legacy-code-protect  .maintenance_scheduler.json  .mcp.json  .mergify.yml  .pre-commit-config.yaml  .pylintrc  .replit  .ruff.toml  .validation_cache.json  .worktree_sync_scientific.json  003-execution-layer-tasks-pr_vs_scientific_comparison.md  =2.20.0  AGENT.md  AGENTS.md  AGENTS.md.remote-vm-template  AGENTS_AND_SCRIPTS_INVENTORY.md  AGENT_FILES_INCONSISTENCY_ANALYSIS.md  AGENT_FILES_REVIEW_RECOMMENDATIONS.md  AGENT_GUIDANCE_PLAN.md  AGENT_GUIDELINES_RESOLUTION_PLAN.md  AGENT_MEMORY_IMPLEMENTATION_SUMMARY.md  AGENT_MEMORY_INVESTIGATION_REPORT.md  ANALYSIS_AND_NUMBERING_SUMMARY.md  ANALYSIS_A_MONOLITH_RELATIONSHIPS.md  (+916 more)
.agent_memory/: ARCHITECTURE.md  IMPLEMENTATION_LAYOUT.md  MEMORY_SYSTEM_GUIDE.md  QUICK_REFERENCE.md  README.md  REVIEW_SUMMARY.md  SCOPE_AND_DESIGN.md  STATUS.txt  VALIDATION_REPORT.md  example_usage.py  memory_api.py
.backups/: ANALYSIS_AND_NUMBERING_SUMMARY.md.1767517849  ANALYSIS_AND_NUMBERING_SUMMARY.md.20260104_201040  CHANGE_SUMMARY.md.20260104_200852  CLEAN_TASK_INDEX.md.1767517855  CLEAN_TASK_INDEX.md.20260104_201040  COMPLETE_ANALYSIS_EXECUTIVE_SUMMARY.md.1767517849  COMPLETE_ANALYSIS_EXECUTIVE_SUMMARY.md.20260104_201040  COMPLETE_ANALYSIS_INDEX.md.1767517849  COMPREHENSIVE_DEPENDENCY_FRAMEWORK.md.1767517855  COMPREHENSIVE_DEPENDENCY_FRAMEWORK.md.20260104_200511  COMPREHENSIVE_DEPENDENCY_FRAMEWORK.md.20260104_201040  EXECUTION_SUMMARY.txt.1767517850  IMPLEMENTATION_GUIDE.md.20260104_200852  IMPLEMENTATION_REFERENCE.md.1767517849  INDEX_AND_GETTING_STARTED.md.1767517856  INDEX_AND_GETTING_STARTED.md.20260104_201040  OPTIMIZED_TASK_SEQUENCE_WITH_EARLY_CLUSTERING.md.1767517849  OPTIMIZED_TASK_SEQUENCE_WITH_EARLY_CLUSTERING.md.20260104_201040  PARALLEL_WORK_STATUS.md.1767517849  PARALLEL_WORK_STATUS.md.20260104_201040  PROJECT_DASHBOARD.txt.20260104_201040  QUICK_START_APPROVAL_GUIDE.md.1767517849  QUICK_START_APPROVAL_GUIDE.md.20260104_201040  README.md.1767517856  README.md.20260104_201040  REFACTORING_COMPLETE_GATE_APPROVED.md.1767517849  REFACTORING_COMPLETE_GATE_APPROVED.md.20260104_201040  REFACTORING_STATUS_VERIFIED.md.20260104_201040  RENUMBERING_021_TO_002_STATUS.md.1767517856  RENUMBERING_021_TO_002_STATUS.md.20260104_201040  RENUMBERING_DECISION_TASK_021.md.1767517856  RENUMBERING_DECISION_TASK_021.md.20260104_201040  TASK-001-INTEGRATION-GUIDE.md.1767517856  TASK-001-INTEGRATION-GUIDE.md.20260104_201040  TASK-021-CLUSTERING-SYSTEM-GUIDE.md.1767517856  TASK-021-CLUSTERING-SYSTEM-GUIDE.md.20260104_201040  (+24 more)
orchestration-tools/: .env.example  .flake8  README.md  pyproject.toml  requirements.txt
orchestration-tools/config/: auth_config.yaml  verification_profiles.yaml
orchestration-tools/docs/: verification_guide.md
orchestration-tools/src/: __init__.py  __main__.py  config.py  logging.py
orchestration-tools/src/cli/: __init__.py  branch_cli.py  consistency_cli.py  contamination_cli.py  formal_verification_cli.py  orchestration_cli.py  token_cli.py
orchestration-tools/src/lib/: api.py  error_handling.py  test_scenarios.py
orchestration-tools/src/models/: __init__.py  base.py  branch.py  check.py  contamination_point.py  context.py  context_boundary.py  formal_verification_tool.py  goal.py  profile.py  task.py  token_usage.py  user.py  verification.py  verification_logic.py
orchestration-tools/src/services/: __init__.py  auth_service.py  base_service.py  compatibility_checker.py  config_service.py  consistency_service.py  context_contamination_service.py  context_verification_service.py  formal_verification_service.py  git_service.py  test_executor.py  token_optimization_service.py  verification_logic_validator.py  verification_service.py
orchestration-tools/tests/: conftest.py
setup/: README.md  args.py  container.py  diagnosis_message.txt  docker-compose.prod.yml  environment.py  launch.py  launch.py.part  launch.py.rej  launch.sh  main.py  orchestration_control.py  prepare_refactoring_tasks.py  project_config.py  pyproject.toml  requirements-cpu.txt  requirements-dev.txt  requirements-gpu.txt  requirements-linux.txt  requirements-windows.txt  requirements.txt  routing.py  services.py  settings.py  setup_environment.sh  setup_environment_system.sh  setup_environment_wsl.sh  setup_python.sh  test_commands.py  test_config.py  test_enhanced_filtering.py  test_launch.py  test_stages.py  test_utils.py  test_validation.py  utils.py  validation.py
setup/backend/python_backend/: gradio_app.py  model_routes.py  utils.py  workflow_routes.py
setup/backend/python_nlp/analysis_components/: urgency_model.py
setup/backlog/tasks/: task-42 - Rebase-scientific-branch-onto-main-after-core-enhancements-merge.md  task-implement-subtree-pull-main.md  task-subtree-migration-2 - Create-Setup-Subtree-Directory-Structure.md  task-subtree-migration-3 - Initialize-Git-Subtree-for-Setup-Directory.md  task-subtree-migration-4 - Update-Launch-Scripts-to-Use-New-Setup-Directory-Structure.md  task-subtree-migration-5 - Migrate-Launch-and-Setup-Changes-from-launch-setup-fixes-Branch.md  task-subtree-migration-6 - Establish-Subtree-Update-Process-for-Main-and-Scientific-Branches.md
setup/client/src/components/: advanced-filter-panel.tsx
setup/commands/: __init__.py  check_command.py  cleanup_command.py  command_factory.py  command_interface.py  run_command.py  setup_command.py  test_command.py
setup/models/: test_model_5b8753a1-b0ab-4d30-9566-24c2e95d2fa6.pkl
setup/modules/email/: routes.py
setup/setup/: launch.sh
setup/setup_backup_20251216_152049/: launch.py
setup/src/core/: dynamic_model_manager.py
setup/src/core/data/: database_source.py
setup/tests/: test_launcher.py
setup/tests/core/: test_caching.py  test_security.py
setup/tests/modules/dashboard/: test_dashboard.py
(+5554 files in other folders)
