[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "taskmaster-emailintelligence"
version = "1.0.0"
description = "AI-powered git worktree-based conflict resolution tool for TaskMaster"
readme = "README.md"
authors = [{name = "TaskMaster Team"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pyyaml>=6.0",
    "gitpython>=3.1.37",
    "pydantic>=2.5.0",
    "asyncio>=3.4.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0"
]

[project.scripts]
eai = "emailintelligence_cli:main"