# EmailIntelligence - Optimized Dependencies for System-Managed Python
# Conditional dependencies to minimize unnecessary downloads

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[project]
name = "emailintelligence"
version = "0.2.0"
description = "Email Intelligence with optimized dependencies for system-managed Python environments"
requires-python = ">=3.11"

# Core dependencies only - always required
dependencies = [
    # Web framework (always needed)
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.3",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "email-validator>=2.2.0",
    "httpx>=0.28.1",

    # Basic UI (always needed)
    "gradio>=4.0.0",
    "pyngrok>=0.7.0",

    # Basic data handling (always needed)
    "aiosqlite>=0.20.0",
    "RestrictedPython>=8.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
# ML/AI features - optional, large downloads
ml = [
    "nltk>=3.9.1",
    "textblob>=0.19.0",
    "transformers>=4.52.4",
    "accelerate>=1.7.0",
    "sentencepiece>=0.2.0",
    "scikit-learn>=1.7.0",
    "joblib>=1.5.1",
    # CPU-only PyTorch (much smaller than GPU versions)
    "torch>=2.7.1",
]

# Data science features - optional
data = [
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
]

# Visualization features - optional
viz = [
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
]

# Database features - optional based on deployment
db = [
    "psycopg2-binary>=2.9.10",
    "redis>=5.0.0",
    "notmuch>=0.29",
]

# Google API features - optional
google = [
    "google-api-python-client>=2.172.0",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
]

# Development tools - only for development
dev = [
    # Testing
    "pytest>=8.4.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=1.2.0",

    # Code quality
    "black>=25.1.0",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "pylint>=3.3.7",
    "mypy>=1.16.0",
    "unimport>=1.3.0",

    # Notebooks
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "ipywidgets>=8.1.0",
    
    # Utilities
    "pip-autoremove>=0.10.0",
]

# Minimal installation - just core features
minimal = []

# Full installation - all features except GPU
full = [
    "emailintelligence[ml,data,viz,db,google,dev]",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Exclude large packages from default installation
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]