[tool.poetry]
name = "emailintelligence"
version = "0.2.0"
description = "A sophisticated email analysis and automation platform"
authors = ["Masum Rab <masumrab@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emailintelligence"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "email-validator>=2.2.0",
    "httpx>=0.28.1",
    "gradio>=4.0.0",
    "pyngrok>=0.7.0",
    "aiosqlite>=0.20.0",
    "RestrictedPython>=8.0",
    "psutil>=6.0.0",
    "pyjwt>=2.8.0",
    "pyotp>=2.9.0",
    "argon2-cffi>=23.1.0",
    "qrcode>=7.4.2",
    "transformers>=4.37.0",
    "networkx>=3.0",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "markupsafe<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=25.1.0",
    "isort>=6.0.1",
    "flake8>=7.2.0",
    "mypy>=1.16.0",
    "pylint>=3.3.7",
    "pytest-cov>=6.0.0",
]
google = [
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "strict"
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "slow: marks tests as slow",
]

[tool.black]
line-length = 88
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "C0330",  # bad-continuation
    "C0326",  # bad-whitespace
    "W0511",  # todo
    "R0903",  # too-few-public-methods
]

[tool.pylint.format]
max-line-length = 88

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "**/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
